   * Add a tooltip with the experience modifier for the units XP display.
   * add an empty attack icon in attack dialog when needed (this also remove
     an error message, bug #9570)
   * better "choose attack direction using the last highlighted hex" on pack
     of units (bug #9649)
   * attack/move cursors and attack direction indicator are not used when
     observing (bug #9610)
 * WML engine:
   * now [base_unit]id= inside [unit] can extend upon existing unit types
   * new tag [filter_radius] to allow greater control over radius expansion
     when using the standard location filter
   * fix a bug where containers could only be stored at the top-level
   * fix a bug where both x and y had to be specified in location filters
   * better handling/reporting of invalid WML variable type usage
   * new key find_in= to allow searching a variable of previously stored  
     locations when using the standard location filter
   * new key find_in= to allow searching a variable of previously stored
     units when using the standard unit filter
   * new extra_defines= key to define in campaigns some other preprocessor
     symbol *before* the files are repreprocessed
   * fog and shroud tiles are now defined by the TerrainWML (not [game_config])
 * team color
   * allow color ranges to be defined on-the-fly (like color palettes)
   * now [side] colour=<string> is valid (previously only int)
 * miscellaneous and bug fixes
   * added a .desktop entry for the editor so that it is shown in the kde/gnome
     menu
   * rewrote the config merge routine (should improve parse time slightly)
   * various code cleanups
   * Isle of Anduin renamed to Isle of Alduin to avoid copyright problems.
   * the assertion 'str.size() <= 4' no longer happens instead the terrain is
      read as 'void' and an ingame message is shown (bug #9609)
   * IMPORTANT! End-of-scenario no longer takes you immediately to the
     next scenario or the lobby. Instead, you linger in browse mode --