@@ -24,6 +24,7 @@ Version 1.3.6+svn:
       next scenario or the lobby. Instead, you linger in browse mode --
       menu commands for chat, saving games, etc. are available.  Clicking
       end-of-turn ends the linger and takes you out.
+    * The 'more' and 'help' button in the title screen now have a tooltip.
 
   * Miscellaneous
     * Isle of Anduin renamed to Isle of Alduin to avoid copyright problems.
